# chess-data-lib

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: PGNGameBuilder.hpp  PGNStatsUpdater.hpp  PGNTagParser.hpp  PGNTokenizer.hpp  databaseStats.hpp  game.hpp  parser.hpp  player.hpp  tournament.hpp  types.hpp
include/utils/: csv.hpp
src/: PGNGameBuilder.cpp  PGNStatsUpdater.cpp  PGNTagParser.cpp  PGNTokenizer.cpp  chessDataLib.cpp  databaseStats.cpp  game.cpp  parser.cpp  player.cpp  tournament.cpp  types.cpp
src/utils/: csv.cpp
tests/: CMakeLists.txt  test_core.cpp  test_csv.cpp
